--- a/styles.css
+++ b/styles.css
@@ -154,5 +154,53 @@ section.about .about-container .info-box .socials i {
 section.about .about-container .info-box .socials i:hover {
   transform: scale(1.1);
 }
+section.experience .section-title {
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 600;
+  margin-bottom: 3rem;
+}
+section.experience .experience-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+}
+section.experience .experience-info .grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+section.experience .experience-info .grid .grid-card {
+  border: 2px solid black;
+  border-radius: 3rem;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: left;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+section.experience .experience-info .grid .grid-card:hover {
+  transform: scale(1.02);
+  background-color: black;
+  color: white;
+}
+section.experience .experience-info .grid .grid-card i {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+section.experience .experience-info .grid .grid-card span {
+  font-size: 1.5rem;
+  font-weight: 500;
+  background: linear-gradient(to right, rgb(255, 0, 255), rgb(0, 157, 255));
+  background-clip: text;
+  color: transparent;
+}
+section.experience .experience-info img {
+  width: 24vw;
+  border-radius: 3rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
