feat: add projects section

--- a/styles.scss
+++ b/styles.scss
@@ -95,6 +95,26 @@ section{
     width: 100%;
     position: relative;
 
+    .btn-group{
+        display: flex;
+        gap: 1rem;
+
+        .btn{
+            border-radius: 3rem;
+            padding: 0.5rem 1.5rem;
+            border: 2px solid black;
+            cursor: pointer;
+            font-weight: 500;
+            text-wrap: nowrap;
+            transition: 0.2s ease-in-out;
+
+            &:hover{
+                background-color: black;
+                color: white;
+            }
+        }
+    }
+
     &.about{
         display: flex;
         align-items: center;
@@ -234,6 +254,55 @@ section{
              img{
                 width: 24vw;
                 border-radius: 3rem;
+            }
+        }
+    }
+
+    &.projects{
+        .projects-grid{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+
+            .project-card{
+                padding: 3rem 2rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                gap: 1.5rem;
+                border: 2px solid black;
+                border-radius: 3rem;
+                cursor: pointer;
+                transition: 0.3s ease-in-out;
+
+                &:hover{
+                    background-color: black;
+                    color: white;
+                    transform: translateY(-10px)scale(1.02);
+
+                    .btn{
+                        border: 2px solid white;
+                        color: white;
+
+                        &:hover{
+                           border: 2px solid white;
+                           background-color: white;
+                           color: black; 
+                        }
+                    }
+                }
+
+                h3{
+                    font-size: 2rem;
+                    font-weight: 500;
+                }
+
+                img{
+                    width: 17vw;
+                    border-radius: 1rem;
+                }
             }
         }
     }
