--- a/styles.scss
+++ b/styles.scss
@@ -306,4 +306,99 @@ section{
             }
         }
     }
+
+    &.contact{
+        .input-box{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            gap: 2rem;
+            margin-top: 5rem;
+
+            .input{
+                position: relative;
+                
+                input{
+                    border-radius: 3rem;
+                    border: 2px solid black;
+                    padding: 2rem 8rem;
+                    font-size: 3rem;
+    
+                    &::placeholder{
+                        font-size: 3rem;
+                    }
+                }
+
+                i{
+                    position: absolute;
+                    font-size: 4rem;
+                    top: 50%;
+                    left: 10px;
+                    transform: translate(50%, -50%);
+                }
+            }
+
+            .btn{
+                border-radius: 3rem;
+                padding: 0.5rem 1.5rem;
+                border: 2px solid black;
+                cursor: pointer;
+                font-weight: 500;
+                text-wrap: nowrap;
+                transition: 0.2s ease-in-out;
+
+                &:hover{
+                    background-color: black;
+                    color: white;
+                }
+            }
+        }
+    }
+
+    footer{
+        bottom: 0;
+        left: 0;
+        height: 10rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+
+        ul{
+            display: flex;
+            align-items: center;
+            gap: 3rem;
+
+            li a{
+                position: relative;
+                color: black;
+                font-weight: 600;
+    
+                &::before{
+                    position: absolute;
+                    content: '';
+                    width: 0;
+                    left: 0;
+                    height: 5px;
+                    top: 25px;
+                    border-radius: 1rem;
+                    transition: 0.3s ease-in-out;
+                    background: linear-gradient(to right, rgb(0,157,255), rgb(255,0,255));
+                }
+    
+                &:hover::before{
+                    width: 100%;
+                }
+            }
+        }
+
+        .copyright{
+            font-size: 300;
+            margin-top: 2rem;
+        }
+    }
 }
